@@ -901,6 +901,9 @@ Changed in ATK 5.7
   atkActionHandler and the atkEditHandler / atkViewHandler which contains
   methods only used by the Edit and View handlers. [Yury, Dennis, Peter]
 * Refactored the tooltip functionality for attributes. [Yury]
+* Sections in atkNode get an id instead of a number. [Patrick]
+* Sections with only hidden attributes are hidden completely. [Patrick, Peter]
+* Sections which are unhidden will appear expanded. [Patrick, Peter]
 - Removed old treeicon code from atkTreeNode. [Guido]
 - Temporarily removed the 'generate title row' checkbox in atkExportHandler as
   it isn't yet implemented. [Guido]
